CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.20rc1

	- The cupstestppd program now checks for bad
	  JobPatchFile attributes and incorrect versions of the
	  Manufacturer attribute for HP printers (STR #155)
	- The filter makefile incorrectly installed
	  libcupsimage.a in the filter directory (STR #180)
	- The scheduler did not verify that the job history
	  files define the job-priority and
	  job-originating-user-name attributes (STR #178)
	- The pstops filter didn't handle poorly-formed binary
	  PostScript files that had CTRL-D's in them (STR #156)
	- The ppdOpen*() and cupsLangGet() functions did not
	  make a copy of the old locale strings when using the
	  POSIX locale when reading files, which apparently
	  caused problems with some implementations of the
	  standard C library. (STR #159)
	- The pdftops filter did not work properly with some
	  embedded Type1C fonts (STR #177)
	- Updated the pdftops filter to be based upon Xpdf
	  2.02pl1 (STR #191)
	- The scheduler did not reset the group list when
	  running CGI and filter processes (STR #185)
	- The scheduler no longer calls malloc and free from the
	  signal handlers (STR #190)
	- The USB backend now uses the manufacturer and model
	  strings if the description string is not available
	  (STR #174)
	- The ppdOpen functions still supported the
	  VariablePaperSize attribute, which was removed in v4.0
	  of the PPD spec.  This caused problems with PPD files
	  that relocated the PageSize option to a non-standard
	  group (STR #158)
	- The cups.list file referenced MAN1EXT, MAN3EXT, and
	  MAN5EXT, but none of those were actually defined (STR
	  #147)
	- Chunked requests could cause a Denial of Service if
	  the connection is terminated before the first byte of
	  chunk data is sent/received (STR #143)
	- Printers with special characters in their names were
	  not accessible from the web interface (STR #120)
	- The lpstat command now shows the correct interface